align the two sections correctly on the bottom

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ Use transparency to get the colour variations necessary to match the design. Hin
     font-family: 'Hanken Grotesk', serif;
     padding: 0;
     margin: 0;
-    box-sizing:  border-box;
+    box-sizing: border-box;
 }
 
 body {
@@ -82,6 +82,13 @@ body {
     align-items: center;
     min-height: 100vh;
     background-color: var(--Pale-blue);
+
+}
+
+.container{
+    box-shadow: rgba(0,0,0,0.24) 0px 3px 8px;
+    border-radius: 2rem;
+    background-color: white;
 
 }
 
@@ -97,7 +104,7 @@ h1 {
     border-radius: 25px;
     background: linear-gradient(to bottom,hsl(252, 100%, 67%), hsl(241, 81%, 54%));
     padding: 20px;
-    width: 230px;
+    width: 15rem;
     height: 100%;
     text-align: center;
     color: white;
@@ -149,9 +156,9 @@ p.final-text {
     float: right;
     padding-left: 1.5rem;
     padding-top: 1.5rem;
-    padding-bottom: 3rem;
-    width: 250px;
-    border-radius: 25px;
+    padding-bottom: 20px;
+    width: 16rem;
+    border-radius: 0px 25px 25px 0px;
     background-color: hsla(0, 0%, 100%, 0.3);
     background: linear-gradient(to bottom, hsla(0, 0%, 100%, 0.2), hsla(0, 0%, 100%, 0.9));;
 
@@ -165,7 +172,7 @@ h3.summary {
 
 .all-skills{
     display: flex;
-    width: 90%;
+    width: 13rem;
     flex-direction: column;
     gap: 0.6rem;
     font-size: 10px;
@@ -248,12 +255,12 @@ button {
     align-content: justify;  
     align-items: center;
     border-radius: 1.5rem;
-    margin-top: auto;
     padding: 0.5rem;
     background-color: var(--Dark-gray-blue);
     color: white;
     font-weight: 700;
     cursor: pointer;
+    border: none;
 
 }
 
